# codelab-fastapi-deployment

./: README.md  pyproject.toml  requirements.txt
codelab-cr-fastapi-firestore-gcs/: Dockerfile  main.py
codelab-cr-fastapi-firestore-gcs/templates/: index.html
